# Robotics_Project4

mapping_project/: CMakeLists.txt  README.md  package.xml
mapping_project/config/: mapping.rviz
mapping_project/launch/: mapping.launch  simulation_mapping.launch
mapping_project/maps/: README.txt  sample_map.yaml
mapping_project/scripts/: generate_sample_map.py
