<?xml version="1.0"?>
<package format="2">
  <name>mapping_project</name>
  <version>0.0.0</version>
  <description>ROS mapping project using LiDAR</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gmapping</depend>
  <depend>rviz</depend>
  <depend>rosbag</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_navigation</depend>
</package> 